--- a/app/Resources/views/agent/show.html.twig
+++ b/app/Resources/views/agent/show.html.twig
@@ -50,7 +50,7 @@
                                 <td><a href="{{ path('showHistory', { 'id': agent.id }) }}"><i class="fas fa-history"></i></a></td>
                             </tr>
                         {% endfor %}                       
-                    </body>                    
+                    </tbody>
                 </table>
             </div>
         </div>
