--- a/app/Resources/views/role/show.html.twig
+++ b/app/Resources/views/role/show.html.twig
@@ -39,7 +39,7 @@
                                 <td><a href="{{ path('deleteRole', { 'id': role.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                                 
                             </tr>
                         {% endfor %}                       
-                    </body>                    
+                    </tbody>
                 </table>
             </div>
         </div>
