--- a/app/Resources/views/rule/show.html.twig
+++ b/app/Resources/views/rule/show.html.twig
@@ -37,7 +37,7 @@
                             <th>Nombre d'heures maximum en moyenne sur X semaine</th>
                             <th>X semaine</th>
                             <th></th>
-                             <th></th>
+                            <th></th>
                             
                         </tr>
                     </thead>                    
@@ -54,7 +54,7 @@
                                 <td><a href="{{ path('editRule', { 'id': rule.id }) }}"><i class="fas fa-edit"></i></a></td>                                
                             </tr>
                         {% endfor %}                       
-                    </body>                    
+                    </tbody>
                 </table>
             </div>
         </div>
