--- a/app/Resources/views/service/show.html.twig
+++ b/app/Resources/views/service/show.html.twig
@@ -45,7 +45,7 @@
                                 <td><a href="{{ path('deleteService', { 'id': service.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
                             </tr>
                         {% endfor %}
-                    </body>                    
+                    </tbody>
                 </table>
             </div>
         </div>
