--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -41,7 +41,7 @@
                                 <td><a href="{{ path('user_delete', { 'id': user.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                                
                             </tr>
                         {% endfor %}
-                    </body>                    
+                    </tbody>
                 </table>
             </div>
         </div>
