--- a/app/Resources/views/agent/showOne.html.twig
+++ b/app/Resources/views/agent/showOne.html.twig
@@ -35,7 +35,7 @@
                             <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
                             <td><a href="{{ path('deleteAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td> 
                         </tr>                                               
-                    </body>                    
+                    </tbody>
                 </table>
             </div>
         </div>
