--- a/app/Resources/views/event/show.html.twig
+++ b/app/Resources/views/event/show.html.twig
@@ -45,7 +45,7 @@
                                 <td><a href="{{ path('eventDelete', { 'id': event.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
                             </tr>
                         {% endfor %}
-                    </body>                    
+                    </tbody>                    
                 </table>
             </div>
         </div>
