--- a/app/Resources/views/team/show.html.twig
+++ b/app/Resources/views/team/show.html.twig
@@ -51,7 +51,7 @@
                                 
                             </tr>
                         {% endfor %}                       
-                    </body>                    
+                    </tbody>
                 </table>
             </div>
         </div>
