--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -45,7 +45,7 @@
                                 <td><a href="{{ path('removeAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                              
                             </tr>
                         {% endfor %}                       
-                    </body>                    
+                    </tbody>
                 </table>
             </div>
         </div>
