--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -27,7 +27,7 @@
                     </a> 
                 </div>
             </div>
-            <div class="row align-items-center justify-content-end" style="background-color: #09357A;">                
+            <div class="row align-items-center justify-content-end" style="background-color: #09357A;">
                 <span class="mr-2 text-white">Bonjour {% if  app.user %} {{ app.user.username }} {% endif %}</span>
                 <span class="mr-2 text-white">
                     {% if  app.user %}
@@ -37,7 +37,7 @@
                     {% endif %}                    
                 </span>
             </div>        
-            <div class="row" style="background-color: #e3f2fd;">  
+            <div class="row bg-menu shadow-lg">
                 <nav class="navbar navbar-expand-lg navbar-light" >               
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav align-items-center justify-content-end">                         
