--- a/app/Resources/views/event/show.html.twig
+++ b/app/Resources/views/event/show.html.twig
@@ -3,22 +3,24 @@
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>
 {% endblock %}
-{% block title %}Welcome!{% endblock %}
+{% block title %}Arrêts de tranche{% endblock %}
 
 {% block body %}   
     <div class="container">       
-        <header class="text-center py-3">
+        <header class="text-center py-3 mb-4">
             <h1 class="bg-white-semi_transparent"><em class="text-dark">Arrêts de tranche </em></h1>
             <p>Voici la liste des arrêts de tranche, vacances scolaires...</p>
         </header>
-        <div class="row">
-            <div class="col-md-1">
+        <div class="row bg-menu my-2">
+            <div class="col-md-10">
                 <span class="fa-stack fa-1x my-2">
-                    <i class="far fa-circle fa-stack-2x"></i>
-                    <a href="{{ path('createEvent') }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
-                </span>                    
-            </div>                
-        </div>        
+                    <i class="fas fa-circle fa-stack-2x text-secondary"></i>
+                    <a href="{{ path('createEvent') }}"><i class="fas fa-plus fa-stack-1x fa-inverse text-white"></i></a>
+                </span>
+                <span id="buttonPrint">
+                </span>
+            </div>
+        </div>
         <div class= "row">
             <div class="col-md-10">
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
@@ -58,7 +60,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.js"></script>
-<script type="text/javascript" src="/assets/js/datatable/config.js"></script>
+<script type="text/javascript" src="/assets/js/datatable/configEvent.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/ajax.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/addDeleteRow.js"></script>
 
