--- a/app/Resources/views/default/accueilAdmin.html.twig
+++ b/app/Resources/views/default/accueilAdmin.html.twig
@@ -2,7 +2,7 @@
 
 {% block stylesheet %}{% endblock %}
 
-{% block title %} Saisir une date {% endblock %}
+{% block title %} Administration {% endblock %}
 
 {% block body %}
     <header class="text-center py-3">
