--- a/app/Resources/views/default/doc.html.twig
+++ b/app/Resources/views/default/doc.html.twig
@@ -3,7 +3,7 @@
 
 {% block stylesheet %}{% endblock %}
 
-{% block title %} Accueil {% endblock %}
+{% block title %} Documentation technique {% endblock %}
 
 {% block body %}
      <header class="text-center py-3">
