--- a/app/Resources/views/event/show.html.twig
+++ b/app/Resources/views/event/show.html.twig
@@ -11,7 +11,7 @@
             <h1 class="bg-white-semi_transparent"><em class="text-dark">Arrêts de tranche </em></h1>
             <p>Voici la liste des arrêts de tranche, vacances scolaires...</p>
         </header>
-        <div class="row bg-menu my-2">
+        <div class="row border border-rounded my-2">
             <div class="col-md-10">
                 <span class="fa-stack fa-1x my-2">
                     <i class="fas fa-circle fa-stack-2x text-secondary"></i>
@@ -61,9 +61,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/configEvent.js"></script>
-<script type="text/javascript" src="/assets/js/datatable/ajax.js"></script>
-<script type="text/javascript" src="/assets/js/datatable/addDeleteRow.js"></script>
-
 {% endblock %}
     
 
