--- a/app/Resources/views/event/show.html.twig
+++ b/app/Resources/views/event/show.html.twig
@@ -8,7 +8,7 @@
 {% block body %}   
     <div class="container">       
         <header class="text-center py-3 mb-4">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Arrêts de tranche </em></h1>
+            <h1 class="bg-white-semi_transparent">Arrêts<em class="text-dark"> de tranche </em></h1>
             <p>Voici la liste des arrêts de tranche, vacances scolaires...</p>
         </header>
         <div class="row border border-rounded my-2">
