--- a/app/Resources/views/letter/show.html.twig
+++ b/app/Resources/views/letter/show.html.twig
@@ -8,7 +8,7 @@
 {% block body %}   
     <div class="container bg-light">
         <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Code Planning</em></h1>
+            <h1 class="bg-white-semi_transparent">Code<em class="text-dark"> Planning</em></h1>
             <p>Horaires remontés pour {{ "now"|date("Y") }}</p>
         </header>
         <div class="row border border-rounded my-2">
