--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -7,7 +7,7 @@
 {% block body %}    
 <div class="container">
     <header class="text-center py-3">
-        <h1 class="bg-white-semi_transparent"><em class="text-dark"></em>AGENDA BROUILLON</h1>
+        <h1 class="bg-white-semi_transparent">Agenda<em class="text-dark"></em> Brouillongit </h1>
         <p>Modifier votre planning ou celui de vos équipes</p>
     </header>
     <div class="row border border-rounded my-2">
@@ -26,10 +26,7 @@
                 <caption class="text-center">Equipe {{ team.name }} du {{ startDate|localizeddate('none', 'none', 'fr', null, 'EE d MMMM y')}} au  {{ endDate|localizeddate('none', 'none', 'fr', null, ' E d MMMM y')}}</caption>
                 <thead class="thead">
                     <tr class="bg-muted">
-                        <th scope ="col" class="text-success">Vacances</th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" colspan="4" class="text-success">Vacances scolaires</th>
                         {% for holiday in holidays %}
                         <th scope ="col"
                             {% if holiday%}
@@ -47,7 +44,7 @@
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
                         {% for dateBetween in dateBetweens %}
-                        <th scope ="col" class="text-light">
+                        <th scope ="col" class="text-light date"}}>
                             {% if dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 6 %}
                                 S
                             {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 1 %}
@@ -69,13 +66,13 @@
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
                     </tr>
-                    <tr class="bg-muted">
+                    <tr class="bg-muted dateIndex">
                         <th scope ="col" class="text-color-blue">Nom</th>
                         <th scope ="col" class="text-color-blue">Prénom</th>
                         <th scope ="col" class="text-color-blue">NNI</th>
                         <th scope ="col" class="text-color-blue">Fonction</th>
                         {% for dateBetween in dateBetweens %}
-                        <th scope ="col" class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'd') }}</th>
+                            <th scope ="col" id="{{ dateBetween.date|date('U')}}" >{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'd') }}</th>
                         {% endfor %}
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
@@ -84,22 +81,26 @@
                 </thead>
                 <tbody>                        
                     {% for agentBetween in agentBetweens %}
-                        <tr>                               
+                        <tr id = "{{ agentBetween.0.agent.nni  }}">
                             <td>{{agentBetween.0.agent.name  }}</td>
                             <td>{{agentBetween.0.agent.firstname  }}</td>
                             <td>{{agentBetween.0.agent.nni  }}</td>
                             <td>{{agentBetween.0.agent.function  }}</td>
-                           {% for letter in agentBetween %}
-                                <td id = "{{ letter.id }}" class="editFor
-                                    {% if letter.letter.letter == 'R' %}
-                                        table-success 
-                                    {% elseif letter.letter.letter == 'H' %}
-                                        table-danger
-                                    {% else %} 
-                                        table-info
-                                    {% endif %}
-                                        ">{{ letter.letter.letter }}
-                                </td>
+                           {% for agenda in agentBetween %}
+                               {% if agenda %}
+                                    <td id = "{{ agenda.id }}" class="editFor
+                                        {% if agenda.letter.letter == 'R' %}
+                                            table-success
+                                        {% elseif agenda.letter.letter == 'H' %}
+                                            table-danger
+                                        {% else %}
+                                            table-info
+                                        {% endif %}
+                                            ">{{ agenda.letter.letter }}
+                                    </td>
+                               {% else  %}
+                                   <td class="editFor border border-dark"></td>
+                               {% endif  %}
                             {% endfor %}
                             <td class="update" scope ="col"><i class="fas fa-edit text-color-blue"></i></td>
                             <td class="check"><a href=""><i class="fas fa-check text-success"></i></a></td>
@@ -108,6 +109,7 @@
                    {% endfor %}                        
                 </tbody>                 
             </table>
+
             <h5>Titre : <span id="titre"></span></h5>
             <h5>Description : <span id="description"></span></h5>
             <h5>Début de semaine légale : <span id="startLegalWeek"></span></h5>
