--- a/app/Resources/views/history/show.html.twig
+++ b/app/Resources/views/history/show.html.twig
@@ -8,9 +8,15 @@
 {% block body %}   
     <div class="container">       
         <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Historique </em></h1>
-            <p>Voici l'historique des changements pour l'agenda de l'agent {{ historys.0.agent.name }} </p>
-        </header>        
+            <h1 class="bg-white-semi_transparent">{{ historys.0.agent.firstname }} {{ historys.0.agent.name }} <em class="text-dark"> historique </em></h1>
+            <p>Voici l'historique des changements pour l'agenda de l'agent {{ historys.0.agent.firstname }} {{ historys.0.agent.name }} </p>
+        </header>
+        <div class="row border border-rounded my-2">
+            <div class="col-md-10">
+                <span id="buttonPrint">
+                </span>
+            </div>
+        </div>
         <div class= "row">
             <div class="col-md-10">
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
@@ -48,7 +54,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.js"></script>
-<script type="text/javascript" src="/assets/js/datatable/config.js"></script>
+<script type="text/javascript" src="/assets/js/datatable/configHistory.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/ajax.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/addDeleteRow.js"></script>
 
