--- a/app/Resources/views/rule/show.html.twig
+++ b/app/Resources/views/rule/show.html.twig
@@ -8,7 +8,7 @@
 {% block body %}
     <div class="container bg-light">
         <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Contraintes réglementaires </em></h1>
+            <h1 class="bg-white-semi_transparent">Contraintes<em class="text-dark"> réglementaires </em></h1>
             <p>Voici la liste des contraintes réglementaires</p>
         </header>
         <div class="row border border-rounded my-2">
