--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -11,14 +11,17 @@
             <h1 class="bg-white-semi_transparent"><em class="text-dark">Equipe {{team.name }} </em></h1>
             <p>Voici la composition de l'équipe</p>
         </header>
-        <div class="row">
-            <div class="col-md-12">
+        <div class="row border border-rounded my-2">
+            <div class="col-md-10">
                 <span class="fa-stack fa-1x my-2">
-                    <i class="far fa-circle fa-stack-2x"></i>
-                    <a href="{{ path('addAgent', { 'id': team.id }) }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
+                    <i class="fas fa-circle fa-stack-2x text-secondary"></i>
+                    <a href="{{ path('addAgent', { 'id': team.id }) }}"><i class="fas fa-plus fa-stack-1x fa-inverse text-white"></i></a>
                 </span>
-            </div>                
-        </div>  
+                <span id="buttonPrint">
+                </span>
+            </div>
+        </div>
+
         <div class= "row">
             <div class="col-md-10">
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
@@ -58,9 +61,8 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.js"></script>
-<script type="text/javascript" src="/assets/js/datatable/config.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/ajax.js"></script>
-<script type="text/javascript" src="/assets/js/datatable/addDeleteRow.js"></script>
+<script type="text/javascript" src="/assets/js/datatable/configTeamAgents.js"></script>
 
 {% endblock %}
     
