--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -120,6 +120,9 @@
             <h5>Temps de repos avant DDay : <span id="intervalBefore"></span></h5>
             <h5>Temps de repos après DDay : <span id="intervalAfter"></span></h5>
             <h5>Average : <span id="average"></span></h5>
+            <h5>DateTimeBefore : <span id="DateTimeBefore"></span></h5>
+            <h5>DateTimeAfter : <span id="DateTimeAfter"></span></h5>
+
             
             
            {# {% for dateBetween in dateBetweens %}
