--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -122,6 +122,7 @@
             <h5>Average : <span id="average"></span></h5>
             <h5>DateTimeBefore : <span id="DateTimeBefore"></span></h5>
             <h5>DateTimeAfter : <span id="DateTimeAfter"></span></h5>
+            <h5>Average per Week : <span id="average"></span></h5>
 
             
             
