--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -56,7 +56,7 @@
                     </tr>
 
                     <tr class ="bg-dark">
-                        <th scope ="col" class="text-info"><a class="btn btn-danger btn-sm" href="{{ path('agendaTempEdit2', { 'id': team.id, 'userId': app.user.id}) }}" role="button">Modifier</a></th>
+                        <th scope ="col" class="text-info">{% if app.user %}<a class="btn btn-danger btn-sm" href="{{ path('agendaTempEdit2', { 'id': team.id, 'userId': app.user.id}) }}" role="button">Modifier</a>{% endif %}</th>
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
@@ -98,6 +98,7 @@
                 </thead>
                 <tbody>
                 {% for agentBetween in agentBetweens %}
+                    {% if  agentBetween %}
                     <tr>
                         <td>{{agentBetween.0.agent.name  }}</td>
                         <td>{{agentBetween.0.agent.firstname  }}</td>
@@ -123,6 +124,7 @@
                         <td class="check"><a href=""><i class="fas fa-check text-success"></i></a></td>
                         <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt text-danger"></i></a></td>
                     </tr>
+                    {% endif %}
                 {% endfor %}
                 </tbody>                 
             </table>
