--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+    {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>
@@ -40,7 +40,7 @@
     <div class= "row">
         <div class="col-md-12">
             <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
-                <caption class="text-center">Equipe {{ team.name }} du {{ startDate|localizeddate('none', 'none', 'fr', null, 'EE d MMMM y')}} au  {{ endDate|localizeddate('none', 'none', 'fr', null, ' E d MMMM y')}}</caption>
+                <caption class="text-center">Equipe {% if team %} {{ team.name }} du {{ startDate|localizeddate('none', 'none', 'fr', null, 'EE d MMMM y')}} au  {{ endDate|localizeddate('none', 'none', 'fr', null, ' E d MMMM y')}} {% endif %}</caption>
                 <thead class="thead">
                     <tr class="bg-muted">
                         <th scope ="col" colspan="4" class="text-success">Vacances scolaires</th>
@@ -56,7 +56,7 @@
                     </tr>
 
                     <tr class ="bg-dark">
-                        <th scope ="col" class="text-info">{% if app.user %}<a class="btn btn-danger btn-sm" href="{{ path('agendaTempEdit2', { 'id': team.id, 'userId': app.user.id}) }}" role="button">Modifier</a>{% endif %}</th>
+                        <th scope ="col" class="text-info">{% if app.user and  team %}<a class="btn btn-danger btn-sm" href="{{ path('agendaTempEdit2', { 'id': team.id, 'userId': app.user.id}) }}" role="button">Modifier</a>{% endif %}</th>
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
