--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -96,15 +96,12 @@
                         <th scope ="col" class="text-info"></th>
                     </tr>
                 </thead>
-                <tbody>
-                {% for agentBetween in agentBetweens %}
-                    {% if  agentBetween %}
-                    <tr>
-                        <td>{{agentBetween.0.agent.name  }}</td>
-                        <td>{{agentBetween.0.agent.firstname  }}</td>
-                        <td>{{agentBetween.0.agent.nni  }}</td>
-                        <td>{{agentBetween.0.agent.function  }}</td>
-                        {% for agenda in agentBetween %}
+                <tbody>                
+                        {% for agent in agentBetweens.0 %}
+                        <td>{{ agent }}</td>                       
+                        {% endfor  %}
+                        
+                        {% for agenda in agentBetweens.1 %}                            
                             {% if agenda %}
                                 <td id = "{{ agenda.id }}" class="
                                         {% if agenda.letter.letter == 'R' %}
@@ -122,10 +119,11 @@
                         {% endfor %}
                         <td class="update" scope ="col"><i class="fas fa-edit text-color-blue"></i></td>
                         <td class="check"><a href=""><i class="fas fa-check text-success"></i></a></td>
+                        {#
                         <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt text-danger"></i></a></td>
-                    </tr>
-                    {% endif %}
-                {% endfor %}
+                        #}
+                                      
+               
                 </tbody>                 
             </table>
         </div>
