--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -79,9 +79,8 @@
                             {% endif %}
                         {% endfor %}
                         </th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
+                        
+                        
                     </tr>
                     <tr class="bg-muted">
                         <th scope ="col" class="text-color-blue">Nom</th>
@@ -90,38 +89,41 @@
                         <th scope ="col" class="text-color-blue">Fonction</th>
                         {% for dateBetween in dateBetweens %}
                             <th scope ="col" class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'd') }}</th>
-                        {% endfor %}
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
+                        {% endfor %}                        
+                        
                     </tr>
                 </thead>
-                <tbody> 
+                <tbody>
                     {% if agentBetweens %}
-                        {% for agent in agentBetweens.0 %}
-
-                                <td>{{ agent }}</td>
-
-                        {% endfor  %}
-                        
-                        {% for agenda in agentBetweens.1 %}                            
-                            {% if agenda %}
-                                <td id = "{{ agenda.id }}" class="
-                                        {% if agenda.letter.letter == 'R' %}
-                                            table-success
-                                        {% elseif agenda.letter.letter == 'H' %}
-                                            table-danger
-                                        {% else %}
-                                            table-info
-                                        {% endif %}
-                                            ">{{ agenda.letter.letter }}
-                                </td>
-                            {% else  %}
-                                <td class="editFor border border-dark"></td>
-                            {% endif  %}
+                        {% for agentRow in agentBetweens %}
+                            <tr>
+                            {% for AgentIdentification in agentRow.0 %}                                
+                                {% for AgentIdentificationDetail in AgentIdentification %}                                    
+                                    <td>{{ AgentIdentificationDetail }}</td>
+                                {% endfor  %}
+                            {% endfor  %}
+                            
+                            {% for agenda in agentRow.1 %}                            
+                                {% if agenda %}
+                                    <td id = "{{ agenda.id }}" class="
+                                            {% if agenda.letter.letter == 'R' %}
+                                                table-success
+                                            {% elseif agenda.letter.letter == 'H' %}
+                                                table-danger
+                                            {% else %}
+                                                table-info
+                                            {% endif %}
+                                                ">{{ agenda.letter.letter }}
+                                    </td>
+                                {% else  %}
+                                    <td class="editFor border border-muted"></td>
+                                {% endif  %}
+                            {% endfor %}                            
+                            </tr>
                         {% endfor %}
-                    {% endif  %}
-                        <td class="update" scope ="col"><i class="fas fa-edit text-color-blue"></i></td>
+                    {% endif  %}                    
+                    
+                        {#<td class="update" scope ="col"><i class="fas fa-edit text-color-blue"></i></td>
                         <td class="check"><a href=""><i class="fas fa-check text-success"></i></a></td>
                         {#
                         <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt text-danger"></i></a></td>
