--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -65,6 +65,7 @@
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
                     </tr>
                     <tr class="bg-muted dateIndex">
                         <th scope ="col" class="text-color-blue">Nom</th>
@@ -74,6 +75,7 @@
                         {% for dateBetween in dateBetweens %}
                             <th scope ="col" id="{{ dateBetween.date|date('U')}}" >{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'd') }}</th>
                         {% endfor %}
+                        <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
@@ -105,7 +107,8 @@
                             {% endfor %}
                             <td class="update" scope ="col"><i class="fas fa-edit text-color-blue"></i></td>
                             <td class="check"><a href=""><i class="fas fa-check text-success"></i></a></td>
-                            <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt text-danger"></i></a></td>                                                                
+                            <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt text-danger"></i></a></td>
+                            <td class="initialize"><a class="btn btn-success btn-sm" href="{{ path('InitializeAgenda', { 'agentId': agentBetween.0.agent.id }) }}" role="button">Initialiser</a></td>
                         </tr>
                         {% endif %}
                     {% endfor %}                        
