--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -34,6 +34,7 @@
                             <th>Voir</th>
                             <th>Editer</th>
                             <th>Supprimer</th>
+                            <th>initialiser l'agenda pour la période </th>
                         </tr>
                     </thead>                    
                     <tbody> 
@@ -45,7 +46,8 @@
                                 <td>{{ agent.nni }}</td>
                                 <td><a href="{{ path('findAgent', { 'id': agent.id }) }}"><i class="fas fa-eye"></i></a></td></td>
                                 <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
-                                <td><a href="{{ path('removeAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                              
+                                <td><a href="{{ path('removeAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
+                                <td class="initialize"><a class="btn btn-success btn-sm" href="{{ path('InitializeAgenda', { 'agentId': agent.id }) }}" role="button">Initialiser</a></td>
                             </tr>
                         {% endfor %}                       
                     </tbody>
