--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -15,7 +15,7 @@
             <div class="col-md-10">
                 <span class="fa-stack fa-1x my-2">
                     <i class="fas fa-circle fa-stack-2x text-secondary"></i>
-                    <a href="{{ path('addAgent', { 'id': team.id }) }}"><i class="fas fa-plus fa-stack-1x fa-inverse text-white"></i></a>
+                    <a href="{{ path('showagent') }}"><i class="fas fa-plus fa-stack-1x fa-inverse text-white"></i></a>
                 </span>
                 <span id="buttonPrint">
                 </span>
