--- a/app/Resources/views/team/addAgent.html.twig
+++ b/app/Resources/views/team/addAgent.html.twig
@@ -3,19 +3,62 @@
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>
 {% endblock %}
-{% block title %}Welcome!{% endblock %}
+{% block title %}Agents{% endblock %}
 
 {% block body %}   
-    <div class="container">
-        <h1>{{title}} un agent dans l'équipe : {{team.name }}</h1>
-        <form action="{{ path('addAgent', { 'id': team.id }) }}" method="post" class="form-inline">
-            <div class="form-group mb-2">
-            {{ form_start(form) }}
-            {{ form_rest(form) }}
-            {{ form_end(form) }}  
-            </div
-        </form>
-    </div> 
+    <div class="container bg-light">
+        <header class="text-center py-3">
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Agents </em></h1>
+            <p>Voici la liste des agents</p>
+        </header>
+        <div class="row border border-rounded my-2">
+            <div class="col-md-10">
+                <span class="fa-stack fa-1x my-2">
+                    <i class="fas fa-circle fa-stack-2x text-secondary"></i>
+                    <a href="{{ path('createAgent') }}"><i class="fas fa-plus fa-stack-1x fa-inverse text-white"></i></a>
+                </span>
+                <span id="buttonPrint">
+                </span>
+            </div>
+        </div>
+        <div class= "row">
+            <div class="col-md-12">               
+                <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
+                     <thead class="thead-dark">
+                        <tr>
+                            <th>id</th>
+                            <th>NNI</th>
+                            <th>Nom</th>
+                            <th>Prénom</th>
+                            <th>Fonction</th>
+                            <th>Equipe</th>
+                            <th>Modifier</th>
+                            <th>Supprimer</th>
+                            <th>Historique des modifications</th>
+                            <th>Ajouter à mon Equipe</th>
+                            
+                        </tr>
+                    </thead>                    
+                    <tbody> 
+                       {%for agent in agents %}
+                            <tr>                                                            
+                                <td>{{ agent.id }}</td>
+                                <td>{{ agent.nni }}</td>
+                                <td>{{ agent.name }}</td>
+                                <td>{{ agent.firstname }}</td>
+                                <td>{{ agent.function }}</td>
+                                <td>{{ agent.team.name }}</td>
+                                <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
+                                <td><a href="{{ path('deleteAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
+                                <td><a href="{{ path('showHistory', { 'id': agent.id }) }}"><i class="fas fa-history"></i></a></td>
+                                <td><a href="{{ path('showHistory', { 'id': agent.id }) }}"><i class="fas fa-plus text-success"></i></a></td>
+                            </tr>
+                        {% endfor %}                       
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>       
 {% endblock %}
 
 
@@ -24,10 +67,9 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.js"></script>
-<script type="text/javascript" src="/assets/js/datatable/config.js"></script>
-<script type="text/javascript" src="/assets/js/datatable/ajax.js"></script>
-<script type="text/javascript" src="/assets/js/datatable/addDeleteRow.js"></script>
-
+<script type="text/javascript" src="/assets/js/datatable/configAgent.js"></script>
 {% endblock %}
     
+
+
 
