--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -25,26 +25,27 @@
             <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                 <caption class="text-center">Equipe {{ team.name }} du {{ startDate|localizeddate('none', 'none', 'fr', null, 'EE d MMMM y')}} au  {{ endDate|localizeddate('none', 'none', 'fr', null, ' E d MMMM y')}}</caption>
                 <thead class="thead">
-                    <tr class="bg-muted">
-                        <th scope ="col" colspan="4" class="text-success">Vacances scolaires</th>
+                    <tr class="bg-muted">                        
+                        <th scope ="col" colspan="6" class="text-success">Vacances scolaires</th>                        
                         {% for holiday in holidays %}
                         <th scope ="col"
-                            {% if holiday%}
-                                class="bg-success border border-light">
+                                {% if holiday%}
+                            class="bg-success border border-light">
                             {% else %}
                                 class="text-light">
                             {% endif %}
-                        {% endfor %}
+                            {% endfor %}
                         </th>
                     </tr>
-
                     <tr class ="bg-dark">
-                        <th scope ="col" class="text-info"><a class="btn btn-success btn-sm" href="{{ path('validTemp', { 'id': team.id, 'userId': app.user.id}) }}" role="button">Valider</a></th>
-                        <th scope ="col" class="text-info"><a class="btn btn-danger btn-sm" href="{{ path('deleteTemp', { 'id': team.id, 'userId': app.user.id}) }}" role="button">Effacer</a></th>
+                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
                         {% for dateBetween in dateBetweens %}
-                        <th scope ="col" class="text-light date">
+                        <th scope ="col" class="text-light">
                             {% if dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 6 %}
                                 S
                             {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 1 %}
@@ -57,61 +58,54 @@
                                 J
                             {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 5 %}
                                 V
-                             {% else %}
+                            {% else %}
                                 D
-                             {% endif %}
+                            {% endif %}
                         {% endfor %}
-                        </th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
+                        </th> 
                     </tr>
-                    <tr class="bg-muted dateIndex">
+                    <tr class="bg-muted">
+                        <th scope ="col" class="text-color-blue"></th>
+                        <th scope ="col" class="text-color-blue">Id</th>
                         <th scope ="col" class="text-color-blue">Nom</th>
                         <th scope ="col" class="text-color-blue">Prénom</th>
                         <th scope ="col" class="text-color-blue">NNI</th>
                         <th scope ="col" class="text-color-blue">Fonction</th>
                         {% for dateBetween in dateBetweens %}
-                            <th scope ="col" id="{{ dateBetween.date|date('U')}}" >{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'd') }}</th>
+                            <th scope ="col" class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'd') }}</th>
                         {% endfor %}
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
-                        <th scope ="col" class="text-info"></th>
                     </tr>
                 </thead>
-                <tbody>                        
-                    {% for agentBetween in agentBetweens %}
-                       {% if  agentBetween.0 %}
-                        <tr id = "{{ agentBetween.0.agent.nni  }}">
-                            <td>{{agentBetween.0.agent.name  }}</td>
-                            <td>{{agentBetween.0.agent.firstname  }}</td>
-                            <td>{{agentBetween.0.agent.nni  }}</td>
-                            <td>{{agentBetween.0.agent.function  }}</td>
-                           {% for agenda in agentBetween %}
-                               {% if agenda %}
+                <tbody>  
+                    {% if agentBetweens %}
+                        {% for agentRow in agentBetweens %}
+                            <tr>
+                            {% for AgentIdentification in agentRow.0 %}
+                                <td class="initialize"><a class="btn btn-success btn-sm" href="{{ path('InitializeAgenda', { 'agentId': AgentIdentification.0 }) }}" role="button">Initialiser</a></td>                                
+                                {% for AgentIdentificationDetail in AgentIdentification %} 
+                                    <td>{{ AgentIdentificationDetail }}</td>
+                                {% endfor  %}
+                            {% endfor  %}
+                            
+                            {% for agenda in agentRow.1 %}                            
+                                {% if agenda %}
                                     <td id = "{{ agenda.id }}" class="editFor
-                                        {% if agenda.letter.letter == 'R' %}
-                                            table-success
-                                        {% elseif agenda.letter.letter == 'H' %}
-                                            table-danger
-                                        {% else %}
-                                            table-info
-                                        {% endif %}
-                                            ">{{ agenda.letter.letter }}
+                                            {% if agenda.letter.letter == 'R' %}
+                                                table-success
+                                            {% elseif agenda.letter.letter == 'H' %}
+                                                table-danger
+                                            {% else %}
+                                                table-info
+                                            {% endif %}
+                                                ">{{ agenda.letter.letter }}
                                     </td>
-                               {% else  %}
-                                   <td class="editFor border border-dark"></td>
-                               {% endif  %}
-                            {% endfor %}
-                            <td class="update" scope ="col"><i class="fas fa-edit text-color-blue"></i></td>
-                            <td class="check"><a href=""><i class="fas fa-check text-success"></i></a></td>
-                            <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt text-danger"></i></a></td>
-                            <td class="initialize"><a class="btn btn-success btn-sm" href="{{ path('InitializeAgenda', { 'agentId': agentBetween.0.agent.id }) }}" role="button">Initialiser</a></td>
-                        </tr>
-                        {% endif %}
-                    {% endfor %}                        
+                                {% else  %}
+                                    <td class="editFor border border-muted"></td>
+                                {% endif  %}
+                            {% endfor %}                            
+                            </tr>
+                        {% endfor %}
+                    {% endif  %}
                 </tbody>                 
             </table>
 
