--- a/app/Resources/views/agent/show.html.twig
+++ b/app/Resources/views/agent/show.html.twig
@@ -32,6 +32,7 @@
                             <th>Prénom</th>
                             <th>Fonction</th>
                             <th>Equipe</th>
+                            <th>Role</th>
                             <th>Modifier</th>
                             <th>Supprimer</th>
                             <th>Historique des modifications</th>
@@ -48,6 +49,7 @@
                                 <td>{{ agent.firstname }}</td>
                                 <td>{{ agent.function }}</td>
                                 <td>{{ agent.team.name }}</td>
+                                <td>{{ agent.roles.0 }}</td>
                                 <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
                                 <td><a href="{{ path('deleteAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
                                 <td><a href="{{ path('showHistory', { 'id': agent.id }) }}"><i class="fas fa-history"></i></a></td>
